--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
 				<a class="link" href="."><img class="logo-header" src="/images/new-logo5.png" alt="logo"></a>
 				<nav id="nav">
 					<ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="services.html">Services & Equipment</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Hogar</a></li>
+						<li><a href="services.html">Servicios y Equipos</a></li>
+						<li><a href="contact.html">Contacto</a></li>
                     </ul>
 				</nav>
 			</header>
@@ -25,9 +25,9 @@
 		<!-- Main -->
 			<section id="main" class="wrapper style1">
 				<header class="major">
-					<h2>Contact</h2>
-					<p>Contact us at any time to discuss your specific needs,</br>
-                        and we will come up with a specific solution for you.</p>
+					<h2>Contacto</h2>
+					<p>Contáctenos en cualquier momento para discutir sus necesidades específicas,
+						y encontraremos una solución específica para usted.</p>
 				</header>
 				<div class="container">
 
@@ -39,24 +39,24 @@
 									<form name="contact" method="POST" data-netlify="true">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-small">
-												<input type="text" name="name" id="name" placeholder="Name" />
+												<input type="text" name="name" id="name" placeholder="Nombre" />
 											</div>
 											<div class="col-6 col-12-small">
-												<input type="email" name="email" id="email" placeholder="Email" />
+												<input type="email" name="email" id="email" placeholder="Correo electrónico" />
 											</div>
 											<div class="col-12">
 												<select name="category" id="category">
-													<option value="">- Category -</option>
-													<option value="surveying">Surveying</option>
-													<option value="droning">Droning</option>
+													<option value="">- Categoría -</option>
+													<option value="surveying">Agrimemsura</option>
+													<option value="droning">Zumbido</option>
 												</select>
 											</div>
 											<div class="col-12">
-												<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+												<textarea name="message" id="message" placeholder="Ingrese su mensaje" rows="6"></textarea>
 											</div>
 											<div class="col-12">
 												<ul class="actions">
-													<li><input type="submit" value="Send Message" /></li>
+													<li><input type="submit" value="Enviar Mensaje" /></li>
 													<li><input type="reset" value="Reset" class="alt" /></li>
 												</ul>
 											</div>
