--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 				<a class="link" href="."><img class="logo-header" src="/images/new-logo5.png" alt="logo"></a>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Hogar</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="services.html">Servicios y Equipos</a></li>
 						<li><a href="contact.html">Contacto</a></li>
 					</ul>
@@ -137,10 +137,11 @@
 			<ul class="icons">
 				<li><a target="_blank" href="https://www.linkedin.com/in/betancourtjuan/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 				<li><a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
-				<li><a target="_blank" href="https://wa.me/2894420564" class="icon fa-whatsapp"></a></li>
+				<li><a target="_blank" href="https://api.whatsapp.com/send?phone=2894420564" class="icon fa-whatsapp"></a></li>
+				<li><a target="_blank" href="https://www.facebook.com/jbsurveyingenterprises/" class="icon fa-facebook-square"></a></li>
 			</ul>
 			<ul class="menu">
-				<li>P: <a href="tel:2894420564">289-442-0564</a></li>
+				<li>P: <a href="tel:+57 313-2180757">+57 313-2180757</a></li>
 				<li>E: <a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com">JBsurveyingenterprises@gmail.com</a></li>
 			</ul>
 			<span class="copyright">
