--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<a class="link" href="."><img class="logo-header" src="/images/new-logo5.png" alt="logo"></a>
 		<nav id="nav">
 			<ul>
-				<li><a href="index.html">Hogar</a></li>
-				<li><a href="services.html">Servicios y Equipost</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="services.html">Servicios y Equipos</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 			</ul>
 		</nav>
@@ -30,7 +30,7 @@
 		<div class="inner">
 			<img class="logo-img" src="/images/new-logo5.png" alt="logo">
 			<ul class="actions special">
-				<li><a href="#one" class="button large scrolly">Aprende más</a></li>
+				<li><a href="#one" class="button large scrolly">Informacion más</a></li>
 			</ul>
 		</div>
 	</section>
@@ -130,7 +130,7 @@
 						<p>Si desea obtener más información sobre lo que podemos ofrecer como topógrafos, por favor
 							haga clic en el enlace a continuación.</p>
 						<ul class="actions special">
-							<li><a href="services.html#section-one" class="button">Aprende más</a></li>
+							<li><a href="services.html#section-one" class="button">Informacion más</a></li>
 						</ul>
 					</article>
 				</div>
@@ -141,7 +141,7 @@
 						<p>Si desea obtener más información sobre lo que podemos ofrecer con nuestra topografía aérea,
 							haga clic en el enlace a continuación.</p>
 						<ul class="actions special">
-							<li><a href="services.html#section-two" class="button">Aprende más</a></li>
+							<li><a href="services.html#section-two" class="button">Informacion más</a></li>
 						</ul>
 					</article>
 				</div>
@@ -154,10 +154,11 @@
 		<ul class="icons">
 			<li><a target="_blank" href="https://www.linkedin.com/in/betancourtjuan/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 			<li><a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
-			<li><a target="_blank" href="https://wa.me/2894420564" class="icon fa-whatsapp"></a></li>
+			<li><a target="_blank" href="https://api.whatsapp.com/send?phone=2894420564" class="icon fa-whatsapp"></a></li>
+			<li><a target="_blank" href="https://www.facebook.com/jbsurveyingenterprises/" class="icon fa-facebook-square"></a></li>
 		</ul>
 		<ul class="menu">
-			<li>P: <a href="tel:2894420564">289-442-0564</a></li>
+			<li>P: <a href="tel:+57 313-2180757">+57 313-2180757</a></li>
 			<li>E: <a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com">JBsurveyingenterprises@gmail.com</a></li>
 		</ul>
 		<span class="copyright">
