--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="inner">
 			<img class="logo-img" src="/images/new-logo5.png" alt="logo">
 			<ul class="actions special">
-				<li><a href="#one" class="button large scrolly">Informacion más</a></li>
+				<li><a href="#one" class="button large scrolly">Más Informacion</a></li>
 			</ul>
 		</div>
 	</section>
@@ -130,7 +130,7 @@
 						<p>Si desea obtener más información sobre lo que podemos ofrecer como topógrafos, por favor
 							haga clic en el enlace a continuación.</p>
 						<ul class="actions special">
-							<li><a href="services.html#section-one" class="button">Informacion más</a></li>
+							<li><a href="services.html#section-one" class="button">Más Informacion</a></li>
 						</ul>
 					</article>
 				</div>
@@ -141,7 +141,7 @@
 						<p>Si desea obtener más información sobre lo que podemos ofrecer con nuestra topografía aérea,
 							haga clic en el enlace a continuación.</p>
 						<ul class="actions special">
-							<li><a href="services.html#section-two" class="button">Informacion más</a></li>
+							<li><a href="services.html#section-two" class="button">Más Informacion</a></li>
 						</ul>
 					</article>
 				</div>
