back to english

--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
 				<nav id="nav">
 					<ul>
                         <li><a href="index.html">Home</a></li>
-						<li><a href="services.html">Servicios y Equipos</a></li>
-						<li><a href="contact.html">Contacto</a></li>
+                        <li><a href="services.html">Services & Equipment</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
 				</nav>
 			</header>
@@ -25,9 +25,9 @@
 		<!-- Main -->
 			<section id="main" class="wrapper style1">
 				<header class="major">
-					<h2>Contacto</h2>
-					<p>Contáctenos en cualquier momento para discutir sus necesidades específicas,
-						y encontraremos una solución específica para usted.</p>
+					<h2>Contact</h2>
+					<p>Contact us at any time to discuss your specific needs,</br>
+                        and we will come up with a specific solution for you.</p>
 				</header>
 				<div class="container">
 
@@ -39,24 +39,24 @@
 									<form name="contact" method="POST" data-netlify="true">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-small">
-												<input type="text" name="name" id="name" placeholder="Nombre" />
+												<input type="text" name="name" id="name" placeholder="Name" />
 											</div>
 											<div class="col-6 col-12-small">
-												<input type="email" name="email" id="email" placeholder="Correo electrónico" />
+												<input type="email" name="email" id="email" placeholder="Email" />
 											</div>
 											<div class="col-12">
 												<select name="category" id="category">
-													<option value="">- Categoría -</option>
-													<option value="surveying">Agrimemsura</option>
-													<option value="droning">Zumbido</option>
+													<option value="">- Category -</option>
+													<option value="surveying">Surveying</option>
+													<option value="droning">Droning</option>
 												</select>
 											</div>
 											<div class="col-12">
-												<textarea name="message" id="message" placeholder="Ingrese su mensaje" rows="6"></textarea>
+												<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
 											</div>
 											<div class="col-12">
 												<ul class="actions">
-													<li><input type="submit" value="Enviar Mensaje" /></li>
+													<li><input type="submit" value="Send Message" /></li>
 													<li><input type="reset" value="Reset" class="alt" /></li>
 												</ul>
 											</div>
@@ -69,11 +69,10 @@
 			<ul class="icons">
 				<li><a target="_blank" href="https://www.linkedin.com/in/betancourtjuan/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 				<li><a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
-				<li><a target="_blank" href="https://api.whatsapp.com/send?phone=2894420564" class="icon fa-whatsapp"></a></li>
-				<li><a target="_blank" href="https://www.facebook.com/jbsurveyingenterprises/" class="icon fa-facebook-square"></a></li>
+				<li><a target="_blank" href="https://wa.me/2894420564" class="icon fa-whatsapp"></a></li>
 			</ul>
 			<ul class="menu">
-				<li>P: <a href="tel:+57 313-2180757">+57 313-2180757</a></li>
+				<li>P: <a href="tel:2894420564">289-442-0564</a></li>
 				<li>E: <a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com">JBsurveyingenterprises@gmail.com</a></li>
 			</ul>
 			<span class="copyright">
