--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="services.html">Servicios y Equipos</a></li>
-				<li><a href="contact.html">Contacto</a></li>
+				<li><a href="services.html">Services & Equipment</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -30,7 +30,7 @@
 		<div class="inner">
 			<img class="logo-img" src="/images/new-logo5.png" alt="logo">
 			<ul class="actions special">
-				<li><a href="#one" class="button large scrolly">Más Informacion</a></li>
+				<li><a href="#one" class="button large scrolly">Learn More</a></li>
 			</ul>
 		</div>
 	</section>
@@ -39,17 +39,16 @@
 	<section id="one" class="wrapper style1">
 		<div class="container">
 			<header class="major">
-				<h2>Quienes Somos</h2>
+				<h2>Who We Are</h2>
 				<img class="survey-img" src="/images/banner3.jpg" alt="surveyor picture">
-				<p class="header-text">Somos una empresa local en servicios de topografía, operada por sus propietarios y totalmente
-					enfocada en atender las necesidades de clientes residenciales, comerciales e industriales.
-					Nuestro objetivo siempre es brindar los mejores servicios de su clase para satisfacer las
-					necesidades de nuestros clientes. Mantenemos un alto nivel de trabajo a precios competitivos y
-					podemos atender proyectos de todos los tamaños. Siempre damos la bienvenida a nuevas
-					consultas y estaremos encantados de proporcionar una cotización sin compromiso y de forma
-					gratuita. Nos enorgullecemos de nuestra profesionalidad, eficiencia, atención al detalle y
-					servicio personalizado. Nuestro enfoque flexible nos permite dar cabida a un servicio
-					personalizado adaptado a cada cliente individualmente.
+				<p class="header-text">We are a local owned surveying operated firm totally focused on serving the needs of residential, commercial and industrial clients.
+					From bench-scale to full-scale our unflinching commitment to superior results in every engagement is unparalleled. 
+					We are always aiming to provide the best in class services and we will continue to deliver our high-quality design,
+					surveying and construction services to meet the needs of our clients.
+					We maintain a high standard of work at competitive rates and all size projects can be catered for.
+					We always welcome new enquiries and will be pleased to provide a no obligation quotation free of charge. 
+					We pride ourselves on our professionalism, efficiency, attention to detail and personalized service.
+					 Our flexible approach allows us to accommodate a custom-tailored service tailored to each individual client.
 					</p>
 			</header>
 	</section>
@@ -57,51 +56,42 @@
 	<!-- Two -->
 	<section id="two" class="wrapper style2">
 		<div class="container">
-			<h2 class="services">Valores fundamentales</h2>
+			<h2 class="services">Core Values</h2>
 			<div class="row gtr-uniform">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-cogs">
-						<h3>Seguridad</h3>
-						<p class="values" data-aos="fade-up" data-aos-duration="1000">Estamos dedicados a mantener seguros a nuestros empleados y clientes a través de la
-							capacitación, la educación y la concientización. Protegemos los activos de la empresa al cumplir
-							con todas las políticas de la empresa y la legislación gubernamental.</p>
+						<h3>Safety</h3>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We are dedicated to keeping our employees and our clients safe through training, education, and awareness. We safeguard company assets by complying with all company policies and government legislation.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-certificate">
-						<h3>Integridad</h3>
-						<p class="values" data-aos="fade-up" data-aos-duration="1000">Establecemos expectativas que exigen de nosotros mismos los más altos estándares de
-							integridad individual y corporativa.</p>
+						<h3>Integrity</h3>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We set expectations that demand of ourselves the highest standards of individual and corporate integrity.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-handshake-o">
-						<h3>Respeto y Justicia</h3>
-						<p class="values" data-aos="fade-up" data-aos-duration="1000">Estamos dedicados a la diversidad, el trato justo; comunicación e interacción abiertas y
-							efectivas; respeto mutuo; y confianza Practicamos un liderazgo que enseña, inspira y promueve
-							la plena participación y el desarrollo profesional.</p>
+						<h3>Respect & Fairness</h3>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We are dedicated to diversity, fair treatment; open and effective communication and interaction; mutual respect; and trust. We practice leadership that teaches, inspires, and promotes full participation and career development.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-envira">
-						<h3>Medio Ambiente</h3>
-						<p class="values" data-aos="fade-up" data-aos-duration="1000">Nos preocupamos por el medio ambiente en el que todos vivimos y estamos comprometidos a
-							salvaguardar y operar de una manera ambientalmente sensible y responsable.</p>
+						<h3>Environment</h3>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We care about the environment in which we all live and are committed to safeguard and operate in a manner that is environmentally sensitive and responsible.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-line-chart">
-						<h3>Mejoras continuas</h3>
-						<p class="values" data-aos="fade-up" data-aos-duration="1000">Creamos una disciplina operativa de mejora continua que es parte integral de nuestra cultura.
-							Fomentamos un entorno que promueve la innovación, la creatividad y los resultados a través
-							del trabajo en equipo y el apoyo.</p>
+						<h3>Continuous Improvement</h3>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We create an operating discipline of continuous improvement that is integral to our culture. We foster an environment that encourages innovation, creativity, and results through teamwork and support.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-check-square-o">
-						<h3>Responsabilidad</h3>
-						<p class="values" data-aos="fade-up" data-aos-duration="1000">Honramos los compromisos que asumimos y tomamos total responsabilidad personal de todas
-							las acciones y resultados.</p>
+						<h3>Accountability</h3>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We honor the commitments we make, and take personal responsibility for all actions and results.</p>
 					</section>
 				</div>
 			</div>
@@ -113,35 +103,27 @@
 	<section id="three" class="wrapper style1">
 		<div class="container">
 			<header class="major">
-				<h2>Servicios que ofrecemos</h2>
-				<p class="section-text">No importa la tarea, el alcance o el entorno, JB Surveying Enterprises puede ofrecer muchos
-					servicios topográficos diferentes según las necesidades del cliente. Trabajamos en estrecha
-					colaboración con ingenieros, arquitectos, planificadores, abogados, contratistas, consultores y
-					agentes inmobiliarios en todas las fases de cualquier proyecto para garantizar que se cumplan
-					todos los requisitos, logrando el mayor valor para nuestros clientes. Cada proyecto tiene
-					diferentes necesidades, podemos asesorarle exactamente sobre los servicios de topografía que
-					necesita y que podemos brindarle.</p>
+				<h2>Services We Offer</h2>
+				<p class="section-text">No matter the task, the scope nor the environment, JB Surveying Enterprises can offer many different surveying services depended on the client's needs.  We work closely with engineers, architects, planners, lawyers, contractors and consultants at all phases of the project to ensure all the requirements are met, achieving the greatest value to our clients. Every project has different needs, we can help advising on exactly what surveying services you are required and we can provide.</p>
 			</header>
 			<div class="row">
 				<div class="col-6 col-6-medium col-12-small" data-aos="fade-up" data-aos-duration="3000">
 					<article class="box post">
 						<a href="images/surveying.jpg" class="image fit"><img src="images/surveying.jpg" alt="" /></a>
-						<h3>Topografía Terrestre</h3>
-						<p>Si desea obtener más información sobre lo que podemos ofrecer como topógrafos, por favor
-							haga clic en el enlace a continuación.</p>
+						<h3>Ground Surveying</h3>
+						<p>If you would like more information on what we can offer as surveyors, please click the link below.</p>
 						<ul class="actions special">
-							<li><a href="services.html#section-one" class="button">Más Informacion</a></li>
+							<li><a href="services.html#section-one" class="button">Learn More</a></li>
 						</ul>
 					</article>
 				</div>
 				<div class="col-6 col-6-medium col-12-small" data-aos="fade-up" data-aos-duration="3000">
 					<article class="box post">
 						<a href="images/drone.jpg" class="image fit"><img src="images/drone.jpg" alt="" /></a>
-						<h3>Topografía Aérea</h3>
-						<p>Si desea obtener más información sobre lo que podemos ofrecer con nuestra topografía aérea,
-							haga clic en el enlace a continuación.</p>
+						<h3>Aerial Surveying</h3>
+						<p>If you would like more information on what we can offer with our aerial surveying, please click the link below.</p>
 						<ul class="actions special">
-							<li><a href="services.html#section-two" class="button">Más Informacion</a></li>
+							<li><a href="services.html#section-two" class="button">Learn More</a></li>
 						</ul>
 					</article>
 				</div>
@@ -154,11 +136,10 @@
 		<ul class="icons">
 			<li><a target="_blank" href="https://www.linkedin.com/in/betancourtjuan/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 			<li><a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
-			<li><a target="_blank" href="https://api.whatsapp.com/send?phone=2894420564" class="icon fa-whatsapp"></a></li>
-			<li><a target="_blank" href="https://www.facebook.com/jbsurveyingenterprises/" class="icon fa-facebook-square"></a></li>
+			<li><a target="_blank" href="https://wa.me/2894420564" class="icon fa-whatsapp"></a></li>
 		</ul>
 		<ul class="menu">
-			<li>P: <a href="tel:+57 313-2180757">+57 313-2180757</a></li>
+			<li>P: <a href="tel:2894420564">289-442-0564</a></li>
 			<li>E: <a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com">JBsurveyingenterprises@gmail.com</a></li>
 		</ul>
 		<span class="copyright">
